--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_colorpicker: ^0.3.4
   url_launcher: ^5.7.10
+  flutter_markdown: ^0.5.2
 
 dev_dependencies:
   flutter_test:
